# mduc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.spdx  README.md  cliff.toml  markdup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  bors.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.md  feature_request.md
.github/workflows/: audit.yml  cd.yml  ci.yml  cli-test.yml  clippy.yml  fmt.yml  release.yml  test.yml
config/: cliff.toml
scripts/: build_debug.sh  build_release.sh  install.sh  release.sh  remove.sh
scripts/local/: install-x86_64-apple-darwin.sh  install-x86_64-linux-gnu.sh  install-x86_64_apple.sh  install-x86_64_linux.sh
scripts/term/: markdup.ps1  markdup.sh  mduc.ps1  mduc.sh
site/: index.html  ps.html  sh.html
src/: lib.rs  main.rs
src/xcore/: core.rs  parse.rs
