[package]
name = "mduc"
version = "0.1.0"
edition = "2021"
description = "A markdown to html compiler"
authors = ["xTeKc"]
homepage = "https://github.com/xTeKc/mduc"

[[bin]]
name = "mduc"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive", "cargo"] }
futures = "0.3.25"
owo-colors = "3.5.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
