[package]
name = "mduc"
version = "0.0.0"
description = "Compile Markdown to HTML."
authors = ["xTekC"]
repository = "https://github.com/xTekC/mduc"
readme = "README.md"
homepage = "https://github.com/xTekC/mduc"
documentation = "https://github.com/xTekC/mduc/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "mduc -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "mduc"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
